[tool.poetry]
name = "async-web3"
version = "0.3.1"
description = "Async Web3 library"
authors = ["Guanqun Lu <guanqunlu@outlook.com>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/guanqun/async-web3.py"
repository = "https://github.com/guanqun/async-web3.py"

keywords = ["ethereum", "web3", "asyncio"]
include = [
    "LICENSE",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.7.2,<3.11"
websockets = "^10.3"
pytest-asyncio = "^0.15.1"
web3 = "^6.0.0b4"
eth-brownie = { git = "https://github.com/sasha00123/brownie.git", rev="68a149fbc7b00cd1b6dd21aa45516d4dd5fbad28" }

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
coverage = "^5.5"
mypy = "^0.902"
pylint = "^2.9.4"
Sphinx = "^4.0.2"
towncrier = "^21.3.0"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.towncrier]
package = "async_web3"
filename = "docs/releases.rst"
directory = "newsfragments"
underlines = ["-", "~", "^"]
issue_format = "`#{issue} <https://github.com/guanqun/async-web3.py/issues/{issue}>`__"
